# llvm-code

./: README.md
EHTest/: ReadMe
EHTest/EHTestProject/: CMakeLists.txt
EHTest/EHTestProject/src/: CMakeLists.txt  Record.cpp  Record.h  main.cpp
EHTest/Monitor/: .MyMonitor.ko.cmd  .MyMonitor.mod.o.cmd  .MyMonitor.o.cmd  Makefile  Module.symvers  MyMonitor.c  MyMonitor.h  MyMonitor.ko  MyMonitor.mod.c  modules.order
EHTest/Monitor/.tmp_versions/: MyMonitor.mod
EHTest/Monitor_APP/: Monitor_App.c
EHTest/NoRepeat/: NoRepeat  NoRepeat.c  imp.txt
EHTest/PairChecker/: PairFile  PairFile_3.1.1.txt  PairFile_3.17.2.txt
EHTest/android-3.10/cnss/: .cnss_common.o.cmd  .cnss_common.o.d  .cnss_core.ko.cmd  .cnss_core.mod.o.cmd  .cnss_core.o.cmd  .cnss_pci.ko.cmd  .cnss_pci.mod.o.cmd  .cnss_pci.o.cmd  .qcomwlan_secif.o.cmd  Makefile  Module.symvers  cnss_core.ko  cnss_pci.c  cnss_pci.ko  cnss_pci.mod.c  modules.order
EHTest/android-3.10/freg/: .freg.o.cmd  CompileDriver.sh  Kconfig  Makefile  freg.c  freg.h  modules.builtin
EHTest/android-3.10/freg/.tmp_versions/: freg.mod
EHTest/android-3.10/freg/mytest/: freg.ll
EHTest/android-3.10/nfc/: .pn548.ko.cmd  .pn548.mod.o.cmd  .pn548.o.cmd  .pn548_hwadapter.ko.cmd  .pn548_hwadapter.mod.o.cmd  .pn548_hwadapter.o.cmd  CompileDriver.sh  FaultTest.sh  GetInjectFunc.sh  Makefile  Module.symvers  a.txt  kmesg.txt  kmesg.txt.gcc  modules.order  pn548.c  pn548.ko  pn548.mod.c  pn548_hwadapter.c  pn548_hwadapter.ko
EHTest/android-3.10/nfc/.tmp_versions/: pn548.mod  pn548_hwadapter.mod
EHTest/android-3.10/nfc/mytest/: pn548.ll  pn548_hwadapter.ll
EHTest/kernel4.4/ehci_hcd/: Attention.txt  FaultTest.sh  GetInjectFunc.sh  Makefile  PairBugFile  TESTFILE  current.txt  ehci-hcd_main.c  ehci-mem.c  func.txt
EHTest/kernel4.4/ehci_hcd/mytest/: ehci-hcd_main.ll  ehci-pci.ll  ehci_hcd.ll
EHTest/kernel4.4/igb/: CompileDriver.sh  FaultTest.sh  Makefile  PairBugFile  dmesg.txt  func_test.txt  igb_main.c
EHTest/kernel4.4/igb/mytest/: e1000_82575.ll  e1000_i210.ll  e1000_mac.ll  e1000_mbx.ll  e1000_nvm.ll  e1000_phy.ll  igb_ethtool.ll  igb_hwmon.ll  igb_main.ll  igb_ptp.ll
EHTest/kernel4.4/r8169/: .r8169_main.o.d  CompileDriver.sh  GetInjectFunc.sh  Makefile  PairBugFile  current.txt  func.txt  r8169.ko
EHTest/kernel4.4/r8169/mytest/: r8169_main.ll
add2sub/src/: main.cpp
add2sub/tests/: cmake_clean.sh  test.cpp
add2sub/tests/src/: Makefile  cmake_install.cmake
getInst/: CMakeLists.txt  README.md
getInst/GetInst/: Makefile.common  config.status
getInst/GetInst/Release+Asserts/lib/: .dir
getInst/GetInst/lib/RecordInst/Release+Asserts/: .dir  RecordInst.d
getInst/GetInst/tools/GetInst/Release+Asserts/: main.d
getInst/src/: CMakeLists.txt  MyRecord.cpp  MyRecord.h  RecordInst.cpp  main.cpp
getInst/test/: LogFile  MyRecord.c  MyRecord.h  RecordInst.cpp  RecordInst.h  run.sh  test  test.bc  test.c  test.s
line2info/: CMakeLists.txt  README.md
line2info/src/: CMakeLists.txt  instructionToLineMap.cpp  instructionToLineMap.h  main.cpp
line2info/test/: MyRecord.c  a.out  foo.bc  run.sh  test  test.bc  test.c
sub2add/src/: CMakeLists.txt  main.cpp
sub2add/tests/: a.out  run.sh
